# AR_STOC

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_pairs.csv
app/: app.py  app_streamlit.py  controlnet_inference.py  data_prep.py  dataset.py  inpaint_inference.py  pipeline_decorator.py  run_inpaint_pipeline.py  sd_inference.py  trigger_pipeline.py  utils.py
