[tool.poetry]
name = "AR_TryOn"
version = "0.1.0"
description = "AR Smart Try-On Project with ClearML and Diffusers"
authors = ["Shristi Hamal <shristi.hamal@student.uts.edu.au>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

# Core dependencies
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
diffusers = "0.30.2"
accelerate = "0.34.2"
transformers = "4.44.2"
safetensors = "0.4.5"
controlnet-aux = "0.0.8"
opencv-python-headless = "*"
mediapipe = "^0.10.14"
clearml = "*"
clearml-agent = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
