[tool.poetry]
name = "AR_TryOn"
version = "0.1.0"
description = "AR Smart Try-On Project with ClearML and Diffusers"
authors = ["Shristi Hamal <shristi.hamal@student.uts.edu.au>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Core dependencies
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
diffusers = "0.30.2"
accelerate = "0.34.2"
transformers = "4.44.2"
safetensors = {extras = ["torch"], version = "0.4.5"}
timm = "^1.0.9"
controlnet-aux = "*"
opencv-python-headless = "*"
mediapipe = "*"
clearml = "*"
clearml-agent = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
